<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.neo.raft.inApp">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <EditText
                android:id="@+id/editText4"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/edit_name"
                android:inputType="textPersonName"
                android:textSize="17sp"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="142dp" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/edit_location"
                android:inputType="textPostalAddress"
                android:textSize="17sp"
                app:layout_constraintTop_toBottomOf="@+id/editText6"
                tools:layout_editor_absoluteX="133dp" />

            <EditText
                android:id="@+id/editText6"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/edit_gender"
                android:inputType="textPersonName"
                android:singleLine="false"
                android:textSize="17sp"
                app:layout_constraintTop_toBottomOf="@+id/editText7"
                tools:layout_editor_absoluteX="108dp" />

            <EditText
                android:id="@+id/editText7"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="17dp"
                android:ems="10"
                android:hint="@string/edit_age"
                android:inputType="number"
                android:textSize="17sp"
                app:layout_constraintTop_toBottomOf="@+id/editText2"
                tools:layout_editor_absoluteX="133dp" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/edit_interests"
                android:inputType="textPersonName"
                android:textSize="17sp"
                app:layout_constraintTop_toBottomOf="@+id/editText4"
                tools:layout_editor_absoluteX="136dp" />

            <EditText
                android:id="@+id/editText5"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="17dp"
                android:ems="10"
                android:hint="@string/edit_email"
                android:inputType="textEmailAddress"
                android:textSize="17sp"
                app:layout_constraintTop_toBottomOf="@+id/editText3"
                tools:layout_editor_absoluteX="115dp" />

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginBottom="16dp"
                android:onClick="submitForm"
                android:text="@string/button_submit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.constraint.ConstraintLayout>
